Phase 1: Bug fix + shared helpers + translator generalization
- Fix schema domain enum: restore all 11 existing domains (was truncated to 2)
- Add app/solvers/utils.py: shared DRY helpers for all Phase 2+ solvers (get_value, get_vector, get_matrix, parse_call, resolve_arg, run_dispatch)
- Add engine/tests/test_utils.py: 35 tests covering all utility functions
- Externalize translator prompts: create translator-prompts/*.txt for all 11 domains
- Refactor ClaudeTranslator: load prompts from resources, derive SUPPORTED_DOMAINS from files
- Update UnsupportedDomainException: accept dynamic list of supported domains
- Fix translator tests: adapt to new domain support + refactored exception constructor
- Fix controller tests: match new UnsupportedDomainException signature

Determinism: all 213 Python engine tests passing (1 pre-existing flaky ODE test)
Schema: 11 domains in enum, single source of truth via translator-prompts/
Translator: no more 3-way domain list duplication; one dynamic source